Fixed spacing of button and changed time font

--- a/src/Messages.css
+++ b/src/Messages.css
@@ -54,20 +54,22 @@
 	position: sticky;
 	border-color:#0081a7;
 }
+
 .MessageContainer button{
     color: white;;
     background-color: #0081a7;
     border-radius: 5px;
 	padding: 5px;
 	width: 20%;
-	margin: 10px;
+	margin-left: 5%;
 	position: sticky;
 	text-align: center;
 	bottom:5px;
 }
 .PageContainer p1{
-	color:white;
+	color:rgb(78, 78, 78);
 	font-weight: 300;
+	letter-spacing: 1px;
 }
 
 .PageContainer h1{
